--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "expo": "~51.0.24",
     "expo-app-loading": "^2.1.1",
